unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Group__c/SpringCMEos__SpringCM_Attribute_Group__c.object-meta.xml
<CustomObject>
    <label>SpringCM Attribute Group</label>
    <nameField>
        <displayFormat>SCMG-{0000}</displayFormat>
        <label>SpringCM Attribute Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SpringCM Attribute Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>