unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Group__c/fields/SpringCMEos__Dynamic_Search_Widget_Configuration__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Dynamic_Search_Widget_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Get It! Configuration</label>
    <referenceTo>SpringCMEos__DSWConfig__c</referenceTo>
    <relationshipLabel>SpringCM Attribute Groups</relationshipLabel>
    <relationshipName>SpringCM_Attribute_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>