unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Group__c/fields/SpringCMEos__ExcludeGroup__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__ExcludeGroup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ExcludeGroup</label>
    <type>Checkbox</type>
</CustomField>