unpackaged/main/default/objects/SpringCMEos__SpringCM_Attribute_Group__c/fields/SpringCMEos__Group__c.field-meta.xml
<CustomField>
    <fullName>SpringCMEos__Group__c</fullName>
    <label>Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>